@@ -1,7 +1,10 @@
 BETA ======= 1.9.2 (HOTFIX)
 
+- updated: F.load(.., ..., [path]) path arguments supports '..' for parent directory
+
 - fixed: U.request() --> `DELETE` method has `application/x-www-form-urlencoded` default content type
 - fixed: routing with `delete` flag
+- fixed: F.worker()
 
 - improve: routing performance with F.onAuthorization()
 
